--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -2,10 +2,10 @@ FROM python:3
 
 WORKDIR /usr/src/app
 
-COPY ./src/requirements.txt ./
+COPY ./requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY ./src .
+COPY . .
 
 CMD [ "python", "./app.py" ]
